# Sandbox

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
Network/Client/NetworkManager/: NetworkManager.cpp  QNetworkClientTcp.cpp  QNetworkClientUdp.cpp
Network/Client/server/inc/: CmdHandler.hpp  NetworkMgr.hpp  TCPConnection.hpp  UserMgr.hpp  helpers.hpp
Network/Client/server/src/: ConnectionMgr.cpp  NetworkMgr.cpp  Server.cpp  TCPConnection.cpp  User.cpp  helpers.cpp  main.cpp
Network/client/inc/ClientManager/: ClientManager.hpp
Network/client/inc/GUIManager/: GUIManager.hpp  Window.hpp
Network/client/inc/NetworkManager/: NetworkManager.hpp  QNetworkClientTcp.hpp  QNetworkClientUdp.hpp  ServerCommsManager.hpp  networkCommon.hpp
Network/client/inc/SoundManager/: OpusHandler.hpp  PortAudioHandler.hpp  SoundManager.hpp
Network/client/src/: main.cpp
Network/client/src/ClientManager/: ClientManager.cpp
Network/client/src/GUIManager/: AddContactWindow.cpp  ConfirmationWindow.cpp  GUIManager.cpp  LoginWindow.cpp  MainWindow.cpp
Network/client/src/NetworkManager/: ServerCommsManager.cpp  ServerCommsManagerQueries.cpp  ServerCommsManagerResponses.cpp
Network/client/src/SoundManager/: OpusHandler.cpp  PortAudioHandler.cpp  SoundManager.cpp
Network/server/inc/: Command.hpp  ConnectionMgr.hpp  IConnection.hpp  Server.hpp  User.hpp  protocol.hpp
Network/server/src/: CmdHandler.cpp  Command.cpp  UserMgr.cpp
SBEngine/Workers/: ThreadPool.cpp  ThreadPool.hpp
SBEngine/component/: FpsCamera.hpp  SceneNode.hpp  Speed.hpp
SBEngine/component/controllers/: Light.hpp  Mouse.hpp
SBEngine/ecs/: ComponentBase.hpp  Ecs.cpp  Ecs.hpp  Entity.cpp  Time.cpp  TimedEvent.cpp  TimedEventAdmin.cpp  TimedEventAdmin.hpp  Vector2.hpp
SBEngine/interface/: Map.cpp  MapCreator.cpp  MapCreator.hpp  ObjectCreator.cpp  ObjectCreator.hpp  Player.cpp  Player.hpp  PlayerCreator.cpp  PlayerCreator.hpp  loadLevelFromFile.cpp  loadLevelFromFile.hpp
SBEngine/network/: TCPConnection.cpp  TCPConnection.hpp  TCPServer.cpp  TCPServer.hpp
SBEngine/network/client/: TCPClient.cpp  TCPClient.hpp
SBEngine/network/server/: TCPConnection.cpp  TCPConnection.hpp  TCPServer.cpp  TCPServer.hpp  UDPConnecion.cpp  UDPConnecion.hpp  UDPServer.cpp  UDPServer.hpp
SBEngine/test/: MainTest.cpp
SBEngine/update/: KeyboardEvent.cpp  Update.cpp  Update.hpp
SBEngine/utils/: export_blender_scene_to_sandbox.py
SBEngine/utils/Blender_to_Sanbox/: export_blender_scene_to_sandbox.py
assets/maps/1/: 1.json
assets/maps/SB_test/: SB_test.json
assets/maps/SB_test_1/: SB_test_1.json
assets/maps/stress_test/: stress_test.json
assets/maps/test/: test.bsp  test.pk3
assets/maps/test/maps/: gtkrad.map
component/: AnimatedMeshScene.hpp  Online.hpp  Position.hpp  SceneNode.hpp
component/controllers/: Keyboard.hpp
ecs/: ComponentList.hpp  DataBank.hpp  Ecs.cpp  Ecs.hpp  Entity.cpp  Entity.hpp  Time.hpp  TimedEvent.hpp  Updates.hpp
game/: Map.hpp  Player.cpp
update/: KeyboardEvent.cpp  KeyboardEvent.hpp  Update.cpp  Updates.hpp
